game/game-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: game
  name: game
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: game
status:
  loadBalancer: {}
