game/game-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: game
  annotations:
    io.rancher.scheduler.global: "true"
spec:
  rules:
    - host: game.jgreat.me
      http:
        paths: 
          - path: /
            backend:
              serviceName: game
              servicePort: 80
